package json added, obfuscation added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
   <!-- <script
     src="https://ascendeum-hb.s3.us-east-2.amazonaws.com/nitin/video-playlist-ads/ascendeum-video-playlist-ads.js">
   </script> -->
-  <script
-    src="./static-server/ascendeum-video-playlist-ads.js">
-    </script>
+  <!-- <script src="./src/ascendeum-video-playlist-ads.js"></script> -->
+  <script src="./dist/ascendeum-video-playlist-ads.min.js"></script>
 
 </head>
 
